tests/ui/compile-flags/invalid/print.rs
//@ compile-flags: --print yyyy

//~? ERROR unknown print request: `yyyy`
